# lab1ForLab6

lab1/: main.c
lab5/: CMakeLists.txt  main.cpp
